test/stg/error/dataType2.stg
-- Duplicate type+data constructors (with Prelude)
data Bool1 = True | False;
data Bool1 = Nil | False;
data Bool2 = True | Con;
data Bool2 = False | True;
